--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <canvas id="game" width="480" height="640"></canvas>
+    <!-- create a new canvas element for the game, needs an id. no need for a width and height -->
+    <canvas id="game"></canvas>
+    <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
+    <script src="js/Aura.js" type="text/javascript"></script>
+    <script src="js/Renderer.js" type="text/javascript"></script>
     <script src="js/Canvaders.js" type="text/javascript"></script>
   </body>
 </html>
