--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <canvas id="game"></canvas>
     <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
     <script src="js/Aura.js" type="text/javascript"></script>
+    <!-- load an helpers and libraries before core files -->
     <script src="js/Helpers.js" type="text/javascript"></script>
+    <script src="js/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
+    <script src="js/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
+
     <script src="js/Renderer.js" type="text/javascript"></script>
     <script src="js/Canvaders.js" type="text/javascript"></script>
   </body>
