Use our own loader class, but allow assigning of another library

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
 
+    <script src="js/Loader.js" type="text/javascript"></script>
     <script src="js/Renderer.js" type="text/javascript"></script>
     <script src="js/Canvaders.js" type="text/javascript"></script>
   </body>
