--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script src="js/Helpers.js" type="text/javascript"></script>
     <script src="js/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
+    <!-- import screens -->
+    <script src="js/Screen.js" type="text/javascript"></script>
+    <script src="js/ScreenManager.js" type="text/javascript"></script>
+    <script src="js/Screens/Game.js" type="text/javascript"></script>
 
     <script src="js/Loader.js" type="text/javascript"></script>
     <script src="js/Renderer.js" type="text/javascript"></script>
