Add a Player and Vector class and render the player

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="js/Aura.js" type="text/javascript"></script>
     <!-- load an helpers and libraries before core files -->
     <script src="js/Helpers.js" type="text/javascript"></script>
+    <script src="js/Vector2.js" type="text/javascript"></script>
+    <script src="js/Player.js" type="text/javascript"></script>
     <script src="js/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <!-- import screens -->
