--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <!-- create a new canvas element for the game, needs an id. no need for a width and height -->
     <canvas id="game"></canvas>
     <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
-    <script src="js/Aura.js" type="text/javascript"></script>
+    <script src="js/Aura/Aura.js" type="text/javascript"></script>
     <!-- load an helpers and libraries before core files -->
-    <script src="js/Helpers.js" type="text/javascript"></script>
-    <script src="js/Vector2.js" type="text/javascript"></script>
-    <script src="js/Player.js" type="text/javascript"></script>
-    <script src="js/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
-    <script src="js/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
+    <script src="js/Aura/Helpers.js" type="text/javascript"></script>
+    <script src="js/Aura/Vector2.js" type="text/javascript"></script>
+    <script src="js/Aura/Player.js" type="text/javascript"></script>
+    <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
+    <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <!-- import screens -->
-    <script src="js/Screen.js" type="text/javascript"></script>
-    <script src="js/ScreenManager.js" type="text/javascript"></script>
-    <script src="js/Screens/Game.js" type="text/javascript"></script>
+    <script src="js/Aura/Screen.js" type="text/javascript"></script>
+    <script src="js/Aura/ScreenManager.js" type="text/javascript"></script>
+    <script src="js/Aura/Screens/Game.js" type="text/javascript"></script>
 
-    <script src="js/Loader.js" type="text/javascript"></script>
-    <script src="js/Renderer.js" type="text/javascript"></script>
+    <script src="js/Aura/Loader.js" type="text/javascript"></script>
+    <script src="js/Aura/Renderer.js" type="text/javascript"></script>
     <script src="js/Canvaders.js" type="text/javascript"></script>
   </body>
 </html>
