--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/Aura/Player.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
+    <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
     <!-- import screens -->
     <script src="js/Aura/Screen.js" type="text/javascript"></script>
     <script src="js/Aura/ScreenManager.js" type="text/javascript"></script>
