Add a new start screen

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/Aura/Screen.js" type="text/javascript"></script>
     <script src="js/Aura/ScreenManager.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Game.js" type="text/javascript"></script>
+    <script src="js/Aura/Screens/Start.js" type="text/javascript"></script>
 
     <script src="js/Aura/Loader.js" type="text/javascript"></script>
     <script src="js/Aura/Renderer.js" type="text/javascript"></script>
