Start to checking for the clicks

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
     <!-- import screens -->
+    <script src="js/Aura/UI.js" type="text/javascript"></script>
     <script src="js/Aura/Screen.js" type="text/javascript"></script>
     <script src="js/Aura/ScreenManager.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Game.js" type="text/javascript"></script>
