Move the files into a core folder

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <!-- create a new canvas element for the game, needs an id. no need for a width and height -->
     <canvas id="game"></canvas>
     <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
-    <script src="js/Aura/Aura.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Aura.js" type="text/javascript"></script>
     <!-- load an helpers and libraries before core files -->
-    <script src="js/Aura/Helpers.js" type="text/javascript"></script>
-    <script src="js/Aura/Vector2.js" type="text/javascript"></script>
-    <script src="js/Aura/Player.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Helpers.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Player.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
     <!-- import screens -->
-    <script src="js/Aura/UI.js" type="text/javascript"></script>
-    <script src="js/Aura/Image.js" type="text/javascript"></script>
-    <script src="js/Aura/Screen.js" type="text/javascript"></script>
-    <script src="js/Aura/ScreenManager.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/UI.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Image.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Screen.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/ScreenManager.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Game.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Start.js" type="text/javascript"></script>
 
-    <script src="js/Aura/Loader.js" type="text/javascript"></script>
-    <script src="js/Aura/Renderer.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Loader.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Renderer.js" type="text/javascript"></script>
     <script src="js/Canvaders.js" type="text/javascript"></script>
   </body>
 </html>
