--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- load an helpers and libraries before core files -->
     <script src="js/Aura/Core/Helpers.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
-    <script src="js/Aura/Core/Player.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Bullet.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/BulletManager.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
