--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <script src="js/Aura/Core/Helpers.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
-    <script src="js/Aura/Classes/Bullet.js?v=1" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Bullet.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/BulletManager.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Enemy.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/EnemyManager.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoaderImage.js" type="text/javascript"></script>
     <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
