--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- load an helpers and libraries before core files -->
     <script src="js/Aura/Core/Helpers.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Score.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Bullet.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/BulletManager.js" type="text/javascript"></script>
