--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <!-- create a new canvas element for the game, needs an id. no need for a width and height -->
+    <h1>Canvaders</h1>
     <canvas id="game"></canvas>
     <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
     <script src="js/Aura/Core/Aura.js" type="text/javascript"></script>
