--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="js/Aura/libs/Tween/Tween.js" type="text/javascript"></script>
     <!-- import screens -->
     <script src="js/Aura/Core/UI.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Text.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Image.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Screen.js" type="text/javascript"></script>
     <script src="js/Aura/Core/ScreenManager.js" type="text/javascript"></script>
