Switched the helpers to a static polyfills file and move the other functions to a Utils class

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- include the Aura libraries, Canvaders.js is the JS that runs everything -->
     <script src="js/Aura/Core/Aura.js" type="text/javascript"></script>
     <!-- load an helpers and libraries before core files -->
-    <script src="js/Aura/Core/Helpers.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Polyfills.js" type="text/javascript"></script>
+    <script src="js/Aura/Core/Utils.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Score.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
