Make enemies fire bullets and hit detect with the player

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Bullet.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/BulletManager.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/EnemyBullet.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Enemy.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/EnemyManager.js" type="text/javascript"></script>
     <script src="js/Aura/libs/PxLoader/PxLoader.js" type="text/javascript"></script>
