--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/Aura/Core/Utils.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Vector2.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Score.js" type="text/javascript"></script>
+    <script src="js/Aura/Classes/Lives.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Player.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/Bullet.js" type="text/javascript"></script>
     <script src="js/Aura/Classes/BulletManager.js" type="text/javascript"></script>
