Add game over screen and destory methods when changing screens@

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="js/Aura/Core/ScreenManager.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Game.js" type="text/javascript"></script>
     <script src="js/Aura/Screens/Start.js" type="text/javascript"></script>
+    <script src="js/Aura/Screens/GameOver.js" type="text/javascript"></script>
 
     <script src="js/Aura/Core/Loader.js" type="text/javascript"></script>
     <script src="js/Aura/Core/Renderer.js" type="text/javascript"></script>
